<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/icon_about"
        android:src="@drawable/ic_vdm" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/developedby_title"
        android:text="@string/about_made"
        android:textAlignment="center"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/me_textview"
        android:text="@string/about_made_person"
        android:textSize="16sp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textAlignment="center"/>

    <View
        android:layout_width="200dp"
        android:layout_height="2dp"
        android:id="@+id/separator"
        android:background="@color/colorDivider"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/using_title"
        android:text="@string/using"
        android:textSize="14sp"
        android:textAllCaps="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textAlignment="center"/>



</LinearLayout>